syntax = "proto2";

package frankenpaxos.paxos;

import "scalapb/scalapb.proto";

option (scalapb.options) = {
  package_name: "frankenpaxos.paxos"
  flat_package: true
};

message HostPortProto {
  required string host = 1;
  required int32 port = 2;
}

message NettyConfigProto {
  required int32 f = 1;
  repeated HostPortProto acceptorAddress = 2;
  repeated HostPortProto leaderAddress = 3;
}
